--- a/app/globals.css
+++ b/app/globals.css
@@ -858,7 +858,6 @@ footer {
 
 /* --- GOOGLE MAPS AUTOCOMPLETE FIX --- */
 .pac-container {
-<<<<<<< HEAD
   z-index: 10000 !important;
   border-radius: 12px;
   margin-top: 8px;
@@ -883,6 +882,7 @@ footer {
   color: #0f172a;
   font-weight: 700;
 }
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
@@ -890,29 +890,8 @@ footer {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
-=======
-    z-index: 10000 !important;
-    border-radius: 12px;
-    margin-top: 8px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    border: none;
-    font-family: 'Inter', sans-serif;
-}
-.pac-item {
-    padding: 12px 16px;
-    cursor: pointer;
-    font-size: 0.9rem;
-    color: #64748b;
-}
-.pac-item:hover {
-    background-color: #f8fafc;
-}
-.pac-item-query {
-    font-size: 0.9rem;
-    color: #0f172a;
-    font-weight: 700;
-} 
->>>>>>> 593adec7bd95406e859f20f7aa9a8b1f3d69d5af
